--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
