--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.15",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cookie": "^0.6.0",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.14",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
