--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
+    "@types/react-image-crop": "^8.1.6",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
@@ -28,6 +29,7 @@
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-image-crop": "^11.0.6",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5"
