--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cookie": "^0.7.0",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
