--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "bootstrap-icons": "^1.11.3",
     "cookie": "^0.7.0",
     "firebase": "^11.4.0",
-    "firebase-admin": "^13.2.0",
+    "firebase-admin": "^13.5.0",
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "next": "14.2.30",
+    "next": "14.2.32",
     "nodemailer": "^6.9.14",
     "quill": "^2.0.2",
     "react": "^18",
@@ -36,6 +36,9 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5"
+  },
+  "resolutions": {
+    "gaxios/form-data": "2.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
